mint 3ds-ben vilagosabb. 

v3.b  00/02/01 by A'rpi
- winver visszaportolasa a forrasba
  (egyszerubb lenne a regi helyett a winver hasznalata, de abbol
  meg hianyoznak a linuxos attributumok, azokat meg nincs kedvem
  ujra beallitgatni)
- #include <GL/gl.h> es <GL/glu.h> atteve agl.h-ba
  tehat eleg az agl.h-t includeolni!!!!
- par .OLD file es felesleges, regi konyvtar torlese



TERVEK a 4.0-ba:
- particlesys dt=0.015-ot fixelni!!
- optimize vertex-be: textura koordinatakra figyelni!!!
- atlatszo objectekre valami egyszerusitett BSP
- loop-ot tesztelni (rotation, float, vect)
- BUGok javitasa:
  - fdtunnel
  - frustum_cull / backface cull bug (lasd beta-ban eltuno facek + particle)
- CLAX kiolese, ujrairasa
- uj .3ds loader  (memoriaba olvassa egyben, lancolt lista chunkokrol.)
- hierarchy-t ellenorizni, szerintem csak 1 szintig muxik. es nem mindenre.
- render-bol lighting es transformations-t attenni 3dslib-be? (do_trans.c)
  elony: szepen szet lenne valasztva a calc es a draw code
  hatrany: opengl-es lighting, material optim stb... ?
  ki kene adni a 3dslib forrasat, mint clax 2.0 vagy ast3dlib! ?
- fdtunnel modositas: 2-nel tobb tunnel, fdtunnel_select most nem muxik
- greets effekt befejezese
- opengl state manager, multitexture?
- sphere es cube fx  (egymasban forgo gombok, es 6 texturas kocka)
- camera valtas scriptbol
- gyorstekeres scriptrendszerbe
- commandline opciok: window/fullscreen, felbontas, mipmap on/off, fps
- textura caching (betolti a texturakat a kartyaba)

KELL MEG:
- hair (szor) effekt
- wireframe,flat
- profiling: meg mindig "elveszik" neha ido a 'draw' reszben. pl chevy, szoba
- optimalt directional lighting attenuation nelkul, normal forgatas nelkul
- objectek sortolasa: eloszor tomor obj-k, utana atlatszok z-sort-olva
  megpedig nem sulypont hanem bbox.min.Z szerint!
- 2D effektek
- animalt texturak (FLI/FLC?)
- tobb fenyforras parametereinek 1ideju allitasa!  (bitmaszk kell light-nal)