@@ -1,7 +1,9 @@
 /*----------------- RENDER LIGHTMAP -------------------*/
-    if(matflags&ast3d_mat_lightmap){
+    if(matflags&ast3d_mat_lightmap || obj->lightmap_id>0){
       aglBlend(AGL_BLEND_MUL);
-      aglTexture(mat->lightmap_id);
+//      aglTexture(mat->lightmap_id);
+      aglTexture(obj->lightmap_id);
+//      printf("Rendering lightmap id=%d\n",mat->lightmap_id);
       glBegin(GL_TRIANGLES);
         glColor3f(ast3d_blend,ast3d_blend,ast3d_blend);
         for (i=0;i<obj->numfaces;i++)
