@@ -3,7 +3,8 @@
 SRCS = render.c particle.c
 OBJS = render.o particle.o
 CC   = gcc
-CFLAGS = -g -O2 -mpentiumpro -pipe
+# CFLAGS = -g -Wall
+CFLAGS = -O2 -mpentiumpro -pipe
 
 .SUFFIXES: .c .o
 
@@ -38,11 +39,11 @@ render.o: /usr/include/sys/select.h /usr/include/bits/select.h
 render.o: /usr/include/bits/sigset.h /usr/include/sys/sysmacros.h
 render.o: /usr/include/alloca.h /usr/include/math.h
 render.o: /usr/include/bits/huge_val.h /usr/include/bits/mathdef.h
-render.o: /usr/include/bits/mathcalls.h ../agl/agl.h /usr/include/GL/gl.h
-render.o: /usr/include/GL/glu.h ../3dslib/ast3d.h ../3dslib/vector.h
-render.o: ../3dslib/matrix.h render.h ../prof.h triangle.c light.c vertlits.c
-render.o: 2_mater.c 3_light.c 4_textur.c 4a_bump.c 5_envmap.c 6_lightmap.c
-render.o: 7_speclr.c
+render.o: /usr/include/bits/mathcalls.h rawfile.c ../agl/agl.h
+render.o: /usr/include/GL/gl.h /usr/include/GL/glu.h ../3dslib/ast3d.h
+render.o: ../3dslib/vector.h ../3dslib/matrix.h render.h ../prof.h triangle.c
+render.o: light.c vertlits.c 2_mater.c lmapmake.c lightvtx.c 3_light.c
+render.o: 4_textur.c 4a_bump.c 5_envmap.c 6_lightmap.c 7_speclr.c
 particle.o: /usr/include/stdio.h /usr/include/features.h
 particle.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
 particle.o: /usr/include/bits/types.h /usr/include/libio.h
